@@ -4,6 +4,8 @@
 	* lib/rubygems/commands/generate_index_command.rb: Fix Indexer class
 	change.
 	* lib/rubygems/commands/mirror_command.rb: Fix for 1.9.
+	* lib/rubygems/commands/pristine_command.rb: Have `gem pristine`
+	give a better report of what it accomplished.
 
 2007-09-20  Eric Hodel  <drbrain@segment7.net>
 
